--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -5,9 +5,9 @@
     "dev": "next dev -p 3000"
   },
   "dependencies": {
-    "next": "14.2.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "^14.2.33",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "version": "1.0.0",
   "main": "next.config.js",
