--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,30 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# --- Node / Next ---
+**/node_modules/
+**/.next/
+**/.turbo/
+**/coverage/
+**/out/
+**/dist/
+**/build/
 
-# Virtual Environment
+# --- Python ---
+.venv/
 venv/
-env/
-ENV/
-env.bak/
-venv.bak/
+**/__pycache__/
+**/.pytest_cache/
 
-# Environment Variables - CRITICAL!
+# --- Env files (keep examples only) ---
 .env
 .env.*
-*.env
 !.env.example
+!.env.portal.example
+portal/frontend/.env.local
+!portal/frontend/.env.local.example
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-.DS_Store
-*.sublime-workspace
-*.sublime-project
-
-# Project specific
-data/logs/
-data/output/*.csv
-data/output/*.xlsx
-data/output/*.json
-data/analytics/
+# --- Logs / OS / IDE ---
 *.log
+.DS_Store
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.mypy_cache/
-.dmypy.json
-dmypy.json
-.ruff_cache/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Temporary
-*.tmp
-*.bak
-~*
-*~
-
-# API Keys and Secrets (extra safety)
-*secret*
-*api_key*
-*apikey*
-config/secrets/
-!*secret*.example
-
-portal/frontend/node_modules/
-portal/frontend/.next/
-
-portal/frontend/node_modules/
-portal/frontend/.next/
+# --- App-specific ---
+config/linkedin_token.json
+data/test_output/
