--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -2,18 +2,29 @@
   "name": "content-portal",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000"
+    "dev": "next dev -p 3000",
+    "tailwind": "tailwindcss"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "^14.2.33",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.3.1"
   },
   "version": "1.0.0",
   "main": "next.config.js",
   "devDependencies": {
-    "@types/node": "24.6.1",
-    "@types/react": "19.1.16",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^20.19.19",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.9.3"
   },
   "keywords": [],
