--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -3,32 +3,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "tailwind": "tailwindcss"
+    "build": "next build",
+    "start": "next start -p ${PORT:-3000}",
+    "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.544.0",
-    "next": "^14.2.33",
-    "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^3.3.1"
+    "next": "14.2.33",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react": "0.544.0",
+    "next-themes": "0.4.6"
   },
-  "version": "1.0.0",
-  "main": "next.config.js",
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20.19.19",
-    "@types/react": "^18.3.25",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "5.9.3"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "@tailwindcss/postcss": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.6.3",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0"
+  }
 }
