--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -8,20 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.33",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "lucide-react": "0.544.0",
-    "next-themes": "0.4.6"
+    "next": "14.2.33",
+    "next-themes": "0.4.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^20.19.19",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.6.3",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
