--- a/portal/frontend/.env.local.example
+++ b/portal/frontend/.env.local.example
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_API_BASE=http://localhost:8001
+# Frontend (Next.js)
+# Local dev:
+NEXT_PUBLIC_API_BASE=http://localhost:8001
+
+# Production (Vercel): set this in Vercel Project → Settings → Environment Variables
+# NEXT_PUBLIC_API_BASE=https://<your-railway-domain>
