--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-# requirements.txt
+# ---- API server ----
 fastapi==0.115.5
 uvicorn[standard]==0.30.3
 requests==2.32.3
 pydantic==2.11.0
 python-dotenv==1.0.1
 
-# logging + analytics used by your system test
+# ---- your pipeline/test deps ----
 structlog==25.4.0
 pandas==2.3.3
 openpyxl==3.1.5
 redis==6.4.0
-tenacity==9.1.2          # fixed pin
+tenacity==9.1.2
 tqdm==4.67.1
 PyYAML==6.0.3
 
-# >>> THIS is the missing dependency <<<
+# ---- OpenAI SDK and compatible HTTP stack ----
 openai==1.51.2
+httpx==0.27.2     # <-- critical: avoid 0.28.x which breaks OpenAI’s http wrapper
