--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ PyYAML==6.0.3
 # ---- OpenAI SDK and compatible HTTP stack ----
 openai==1.51.2
 httpx==0.27.2     # <-- critical: avoid 0.28.x which breaks OpenAI’s http wrapper
+itsdangerous==2.2.0
