--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -8,14 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "0.544.0",
+    "lucide-react": "^0.363.0",
     "next": "14.2.33",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
