--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
-# --- core web ---
+# --- Web API ---
 fastapi>=0.110
-uvicorn[standard]>=0.27
-requests>=2.31
+uvicorn[standard]>=0.27        # includes uvloop & httptools
 pydantic>=2.6
+requests>=2.31
+httpx>=0.27                    # async HTTP client (some services may use this)
+aiohttp>=3.9                   # if your LinkedIn publisher uses aiohttp
 
-# --- config & env ---
-python-dotenv>=1.0
-PyYAML>=6.0
+# --- Config / utilities ---
+python-dotenv>=1.0             # loads .env for OPENAI_API_KEY, etc.
+PyYAML>=6.0                    # AppConfig.from_yaml()
+structlog>=24.1                # your logger_config uses structlog
+typing_extensions>=4.9         # safety for type hints on older py
 
-# --- AI client (needed by src/infrastructure/ai/openai_client.py) ---
-openai>=1.30.0
+# --- Data / export ---
+pandas>=2.1                    # ExportManager writes CSVs / dataframes
+numpy>=1.25                    # pandas dependency & basic analysis
 
-# --- logging (needed by logger_config / structlog imports) ---
-structlog>=24.1
+# --- OpenAI (real client, no mocks) ---
+openai>=1.30.0                 # AsyncOpenAI used by src.infrastructure.ai.openai_client
