--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 # --- Web API ---
 fastapi>=0.110
-uvicorn[standard]>=0.27        # includes uvloop & httptools
+uvicorn[standard]>=0.27
 pydantic>=2.6
 requests>=2.31
-httpx>=0.27                    # async HTTP client (some services may use this)
-aiohttp>=3.9                   # if your LinkedIn publisher uses aiohttp
+httpx>=0.27
+aiohttp>=3.9
 
 # --- Config / utilities ---
-python-dotenv>=1.0             # loads .env for OPENAI_API_KEY, etc.
-PyYAML>=6.0                    # AppConfig.from_yaml()
-structlog>=24.1                # your logger_config uses structlog
-typing_extensions>=4.9         # safety for type hints on older py
+python-dotenv>=1.0
+PyYAML>=6.0
+structlog>=24.1
+typing_extensions>=4.9
 
 # --- Data / export ---
-pandas>=2.1                    # ExportManager writes CSVs / dataframes
-numpy>=1.25                    # pandas dependency & basic analysis
+pandas>=2.1
+numpy>=1.25
 
 # --- OpenAI (real client, no mocks) ---
-openai>=1.30.0                 # AsyncOpenAI used by src.infrastructure.ai.openai_client
+openai>=1.30.0
+
+# --- Retries / robustness ---
+tenacity>=8.2.3
