--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,7 @@
 [build]
 builder = "nixpacks"
+buildCommand = "pip install -r portal/backend/requirements.txt"
 
 [deploy]
-startCommand = "cd portal/backend && PYTHONPATH=/app:$PYTHONPATH uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-
-[build]
-buildCommand = "pip install -r portal/backend/requirements.txt"
+startCommand = "PYTHONPATH=/app uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+workingDirectory = "/app/portal/backend"
